--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "knex": "^0.21.12",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "postgrator-cli": "^3.2.0",
     "prettier": "^2.1.2",
-    "xss": "^1.0.8",
-    "postgrator-cli": "^3.2.0"
+    "socket.io": "^3.0.1",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.2.0",
